# a2ui

./: .gitignore  .releaserc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  dependabot.yml  release-please-config.json  release-please-manifest.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: python-ci.yml  release-please.yml  release.yml  semantic-pull-request.yml  web-ci.yml  zizmor.yml
agent/python-agent/: README.md  __init__.py  agent.py  agent_with_grounding.py  pyproject.toml
agent/python-agent/shared/schema/: maps_catalog_extension.json
agent/python-agent/skills/google-maps-enriched-local-query-response/: SKILL.md
agent/python-agent/skills/greet/: SKILL.md
agent/python_agent/: README.md  agent.py  agent_with_grounding.py  pyproject.toml
agent/python_agent/shared/schema/: maps_catalog_extension.json
agent/python_agent/skills/google-maps-enriched-local-query-response/: SKILL.md
client/android/: README.md
client/android/GoogleMapsA2UI/: .gitignore  build.gradle  settings.gradle
client/android/GoogleMapsA2UI/src/main/: AndroidManifest.xml
client/android/GoogleMapsA2UI/src/test/: README.md
client/ios/: README.md
client/ios/GoogleMapsA2UI/: Package.swift
client/ios/GoogleMapsA2UI/Tests/: A2AResponseParserTests.swift
client/web/: README.md  package-lock.json  package.json  tsconfig.json
client/web/src/lit/: a2ui_client.ts  a2ui_renderer.ts  catalog.ts  index.ts  theme.ts
client/web/src/lit/custom-components/: google_map.ts  (+2 more)
(+11 files in other folders)
